BookReviewBFF/Kubernetes/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookreview-msa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bookreview
  name: bookreview-bff
  namespace: bookreview-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookreview-bff
  template:
    metadata:
      labels:
        app: bookreview-bff
    spec:
      containers:
      - image: ghcr.io/mochizuki875/bookreview-bff:v1.0
        name: bookreview-bff
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookreview
  name: bookreview-bff
  namespace: bookreview-msa
spec:
  selector:
    app: bookreview-bff
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-bff-ingress
  namespace: bookreview-msa
spec:
  ingressClassName: nginx
  rules:
  - host: bookreview-msa.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookreview-bff
            port:
              number: 8080
